--- a/proyecto/templates/app/blog.html
+++ b/proyecto/templates/app/blog.html
@@ -53,7 +53,7 @@
                 <img src="./img/bg-img/21.jpg " alt=" ">
               </div>
               <div class="blog-content ">
-                <a href="# " class="post-title ">Tooth decay: why good dental hygiene is important</a>
+                <a href="# " class="post-title ">Texto de ejemplo</a>
                 <span class="post-date ">28 Sep 2018</span>
               </div>
             </div>
@@ -64,7 +64,7 @@
                 <img src="./img/bg-img/22.jpg " alt=" ">
               </div>
               <div class="blog-content ">
-                <a href="# " class="post-title ">Six reasons your breath might smell like poop</a>
+                <a href="# " class="post-title ">Texto de ejemplo</a>
                 <span class="post-date ">28 Sep 2018</span>
               </div>
             </div>
@@ -75,7 +75,7 @@
                 <img src="./img/bg-img/23.jpg " alt=" ">
               </div>
               <div class="blog-content ">
-                <a href="# " class="post-title ">Everything you need to know about sinus infection</a>
+                <a href="# " class="post-title ">Texto de ejemplo</a>
                 <span class="post-date ">28 Sep 2018</span>
               </div>
             </div>
