--- a/proyecto/templates/app/blog2.html
+++ b/proyecto/templates/app/blog2.html
@@ -3,89 +3,47 @@
 {% block content%}
 
 
-<section class="dento-blog-area mt-50">
+<section class="dento--blog-area mt-50">
     <div class="container">
-        <div class="row">
-            <div class="col-12 col-lg-8">
+      <div class="row justify-content-center">
+        <div class="col-12 col-lg-8 mb-100">
+            
+          <!-- Blog Details Area -->
+          <div class="blog-details-area">
+            <img class="imgblog2" src="{{ blog.imagen.url }}" alt="">
 
-                <!-- Single Blog Item -->
-                <div class="single-blog-item style-2 d-flex flex-wrap align-items-center mb-50">
-                    {% for p in blog %}
-                    <!-- Blog Thumbnail -->
-                    <div class="blog-thumbnail">
-                        <a href="#">
-                            <img src="{{ p.imagen.url }}" alt="">
-                        </a>
-                    </div>
-                    <!-- Blog Content -->
-                    <div class="blog-content">
-                        <a href="#" class="post-title">{{ p.titulo }}</a>
-                        <p>{{ p.descripcion }}</p>
-                        <div class="post-meta">
-                            <a href="#"><i class="icon_clock_alt"></i>{{ p.fecha }}</a>
-                        </div>
-                    </div>
-                    {% endfor %}
-                </div>
-
-
-                <!-- Pagination -->
-                <nav class="dento-pagination mb-100">
-                    <ul class="pagination">
-                        <li class="page-item active"><a class="page-link" href="#">1</a></li>
-                        <li class="page-item"><a class="page-link" href="#">2</a></li>
-                        <li class="page-item"><a class="page-link" href="#"><i class="fa fa-angle-right"></i></a></li>
-                    </ul>
-                </nav>
+            <h2 class="post-title">{{ blo.titulo }}</h2>
+            <div class="post-meta">
+              <a href="#"><i class="icon_clock_alt"></i>{{ blog.fecha }}</a>
             </div>
+            <p>{{ blog.descripcion }}</p>
+            <p>Vestibulum vel ante a quam consectetur volutpat eu a felis. Nullam non dui quis massa condimentum porttitor non ut nisi. Maecenas congue scelerisque purus, eget molestie ligulan volutpatut. Integer artor miss, cursussed efficitur non,
+              consequat a diam. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Nulla facilisi. Integer vel ullamcorper neque. Quisque convallis ante purus, eget congutor ultrices. Orci varius natoque
+              penatibus et magnis dis parturient montes, nascetur ridiculus mus. Aenean anunc massa venenatis ullamcorper. Mauris ipsum tellus, faucibus massa non, dapibus suscipit orci.</p>
+            <blockquote cite="" class="dento-blockquote d-flex">
+              <div class="icon">
+                <i class="fa fa-quote-left"></i>
+              </div>
+              <div class="text">
+                <h5>Good dental care doesn't make you a good student, but if your tooth hurts, it's hard to be a good student</h5>
+                <h6>Geoffrey Canada / <span>Social Activist</span></h6>
+              </div>
+            </blockquote>
+            <p>Proin venenatis elementum pretium. Vivamus mollis iaculis mi, a efficitur turpis maximus non. Sed felis sapien, aliquam eu nunc in, tempus interdum turpis. In in porta nulla. Maecenas ut elit nec nibh vehicula auctor eget felis. Nulla
+              finibus dictum augue ullamcorper. Integer nuamcorper lorem sit down amet dignissim tincidunt.
+              Utsu risus feugiat, scelerisque turpis eu, suscipit orci. Fusce indo diam ipsum. Nulla facilisi class aptent taciti
+              litora torquent per conubia nostra, per inceptos himenaeos.</p>
 
-            <!-- Dento Sidebar Area -->
-            <div class="col-12 col-lg-4">
-                <div class="dento-sidebar">
+            <p>Nunc vitae nisl porttitor, consectetur sapien vel, vulputate orci. Sed viverra, neque action lacinia hendrerit, lectus purus pellentesque dui, eu porttitor enim neque vitae magna. Nunc nec eros nonta risus vestibulum feugiat. In
+              semper tempor sem, eget porttitor dolor convallis sit amet. Praesent ut justo augue. Curabitur id elit nisi. Vivamus varius lacus sit amet nisi lacinia, sed pulvinar odio rhoncus. In sagittis aliquet tellus. Nulla pellentesque, risus
+              vitae porta iaculis, metus tortor cursus felis, at porta odio lorem nonsa mauris. Nullam mattis nulla blandit sapien cursus, quis luctus ex volutpat. Vestibulum santa dui nulla, sed feugiat felis hendrerit euro. Praesent in lobortis
+              orci, vitae finibus tortor. Aliquam nisl sapien, posuere ac accumsan scelerisque, eleifend quis dui, quisque cursus congue nibh pretium blandit.</p>
+          </div>
 
-                    <!-- Single Widget Area -->
-                    <div class="single-widget-area news-widget">
-                        <h5 class="widget-title">LOS MÁS DESTACADOS</h5>
-
-                        <!-- Single News Area -->
-                        <div class="single-news-area d-flex align-items-center">
-                            <div class="blog-thumbnail">
-                                <img src="./img/bg-img/21.jpg" alt="">
-                            </div>
-                            <div class="blog-content">
-                                <a href="#" class="post-title">Tooth decay: why good dental hygiene is important</a>
-                                <span class="post-date">28 Sep 2018</span>
-                            </div>
-                        </div>
-
-                        <!-- Single News Area -->
-                        <div class="single-news-area d-flex align-items-center">
-                            <div class="blog-thumbnail">
-                                <img src="./img/bg-img/22.jpg" alt="">
-                            </div>
-                            <div class="blog-content">
-                                <a href="#" class="post-title">Six reasons your breath might smell like poop</a>
-                                <span class="post-date">28 Sep 2018</span>
-                            </div>
-                        </div>
-
-                        <!-- Single News Area -->
-                        <div class="single-news-area d-flex align-items-center">
-                            <div class="blog-thumbnail">
-                                <img src="./img/bg-img/23.jpg" alt="">
-                            </div>
-                            <div class="blog-content">
-                                <a href="#" class="post-title">Everything you need to know about sinus infection</a>
-                                <span class="post-date">28 Sep 2018</span>
-                            </div>
-                        </div>
-                    </div>
-
-                </div>
-            </div>
+         
         </div>
+      </div>
     </div>
-</section>
-<!-- *****Blog Area End ***** -->
+  </section>
 
 {% endblock content%}
