--- a/proyecto/app/static/css/style.css
+++ b/proyecto/app/static/css/style.css
@@ -146,8 +146,10 @@ img:hover {
     margin-bottom: 20px;
     padding: 20px;
     border-radius: 25px 0;
-    color: #474747;
+    color: #7A7A7A;
     background-color: #e0f2f1;
+    font-family: "Comic Sans MS", cursive, sans-serif;
+    font-size: 15px;
 }
 
 
@@ -239,4 +241,15 @@ h5.widget-title {
 
 .fas {
     color: #16a374;
+}
+
+p {
+    font-family: "Comic Sans MS", cursive, sans-serif;
+    font-size: 20px;
+}
+
+.dropdown-item-text {
+    font-family: "Comic Sans MS", cursive, sans-serif;
+    font-size: 15px;
+    color: #7A7A7A;
 }
