--- a/proyecto/templates/app/index.html
+++ b/proyecto/templates/app/index.html
@@ -58,13 +58,13 @@
 <div class="wrapper row3">
     <main class="hoc container-fluid clear">
         <!-- main body -->
-
         <div class="sectiontitle">
-            <h6 class="heading font-x2">{{ mi.tituloCentro }}</h6>
+            <h6 class="heading font-x2">NUESTRO CENTRO</h6>
         </div>
-        <article class="group">
-            <div class="one_half first mt-5">
 
+        <article class="group">
+            <div class="one_half first mt-1">
+                <h6 class="heading font-x2">{{ mi.tituloCentro }}</h6>
                 <p>{{ mi.textoCentro }}</p>
             </div>
             <div class="one_half">
